fixing banner spacing

--- a/src/styles/components/_banner.down_arrow.scss
+++ b/src/styles/components/_banner.down_arrow.scss
@@ -2,7 +2,7 @@
   color: $c--white;
   position: absolute;
   z-index: 1;
-  bottom: 1.5625rem;
+  bottom: 0;
   width: 100%;
   margin: 0 auto;
   display: block;
