--- a/src/styles/components/_banner.link.scss
+++ b/src/styles/components/_banner.link.scss
@@ -11,7 +11,7 @@
 }
 
 .banner--nav_links {
-  margin-top: 10rem;
+  margin-top: 5%;
   display: flex;
   align-items: center;
   justify-content: space-around;
